fixed vh on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
 @media only screen and (max-width: 768px) {
   .container {
     flex-direction: column-reverse;
+    max-height: 100vh;
   }
 }
 .image {
